<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:fontFamily="@font/quicksand_medium"
        android:key="high_accuracy_gps_enabled"
        android:summary="@string/preference_high_accuracy_gps_summary"
        android:title="@string/preference_high_accuracy_gps" />

    <PreferenceCategory
        android:title="@string/preference_account_category"
        app:allowDividerAbove="false"
        app:allowDividerBelow="true">

    </PreferenceCategory>
    <Preference
        android:id="@string/preference_sign_out"
        android:fontFamily="@font/quicksand_medium"
        android:key="sign_out"
        android:summary="@string/preference_sign_out_summary"
        android:title="@string/preference_sign_out" />
</PreferenceScreen>