<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/toolbarTabLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="fill"
        app:tabIndicatorFullWidth="true"
        app:tabMode="auto"
        app:tabPaddingEnd="5dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_btn_home"
            android:text="@string/title_home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabForage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_btn_forage"
            android:text="@string/title_forage" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabBuild"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_btn_build"
            android:text="@string/title_build" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabInventory"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_btn_inventory"
            android:text="@string/title_inventory" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabSettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:icon="@drawable/ic_btn_settings"
            android:text="@string/title_settings" />

    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>